<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/product1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onChecked"
                android:text="@string/apple" />

            <EditText
                android:id="@+id/kolvo1"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />

            <TextView
                android:id="@+id/result1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/product2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onChecked"
                android:text="@string/strawberry" />

            <EditText
                android:id="@+id/kolvo2"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />

            <TextView
                android:id="@+id/result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/product3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onChecked"
                android:text="@string/bluebery" />

            <EditText
                android:id="@+id/kolvo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />

            <TextView
                android:id="@+id/result3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/product4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onChecked"
                android:text="@string/potatoes" />

            <EditText
                android:id="@+id/kolvo4"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />

            <TextView
                android:id="@+id/result4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculate"
            android:text="@string/but_calc" />

        <Switch
            android:id="@+id/dialogSwitch"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sw_dialog" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:text="@string/apple" />

            <EditText
                android:id="@+id/buy1"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="90" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="61dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/apple" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strawberry" />

            <EditText
                android:id="@+id/buy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="180" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="53dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/strawberry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluebery" />

            <EditText
                android:id="@+id/buy3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="260" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="83dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/blueberry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potatoes" />

            <EditText
                android:id="@+id/buy4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="60" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="63dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/potato" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/savePrices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="savePrices"
            android:text="@string/but_save_prices" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/author" />
    </LinearLayout>

</LinearLayout>